<resources>
    <string name="app_name">SubmissionStoryApp</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_title">Login to your account</string>
    <string name="register">Sign up</string>
    <string name="email_not_valid">Email is not valid</string>
    <string name="password_not_valid">Password must more than 8 characters</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_title">Create your account</string>
    <string name="name">Name</string>
    <string name="sign_up_failed">Sign up was failed. Please check your network</string>
    <string name="email_taken">Email has taken</string>
    <string name="sign_up_success">Sign up was successful</string>
    <string name="login_success">Login was successful</string>
    <string name="login_failed">Login was failed. Please check your network</string>
    <string name="login_incorrect">Email or password is incorrect</string>
    <string name="settings">Settings</string>
    <string name="sign_out">Sign out</string>
    <string name="dark_mode">Dark mode</string>
    <string name="stories_photo">Stories Photo</string>
    <string name="error_connection">Failure connection.\nPlease check your network</string>
    <string name="add_story">Add Story</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="add_description">Add Description</string>
    <string name="image_preview">Photo Preview</string>
    <string name="select_photo_dialog">Select photo…</string>
    <string name="gallery_dialog">Choose a picture</string>
    <string name="failed_add_story">Failed to add story.\nPlease try again</string>
    <string name="appwidget_text" translatable="false">EXAMPLE</string>
    <string name="add_widget" translatable="false">Add widget</string>
    <string name="app_widget_description" translatable="false">This is an app widget description</string>
    <string name="no_data_text">Found no data</string>
    <string name="app_desc">Keep connected with sharing story</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="list_story">List</string>
    <string name="maps_story">Maps</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="icon">Icon Apps</string>
    <string name="send_location">Send my location</string>
    <string name="not_granted_permission">Please grant the permission to access this feature</string>
    <string name="location_not_found">Location is not found. Try Again</string>
    <string name="retry">retry</string>
</resources>